@startuml

title __TANK GAME's Class Diagram__\n

  namespace src {
    class src.BreakableWall {
    }
  }
  

  namespace src {
    class src.Bullet {
    }
  }
  

  namespace src {
    class src.CollisionHandler {
    }
  }
  

  namespace src {
    abstract class src.GameObject {
    }
  }
  

  namespace src {
    class src.GameWorld {
    }
  }
  

  namespace src {
    class src.Menu {
    }
  }
  

  namespace src {
    class src.MouseReader {
    }
  }
  

  namespace src {
    class src.PowerUp {
    }
  }
  

  namespace src {
    class src.Tank {
    }
  }
  

  namespace src {
    class src.TankControl {
    }
  }
  

  namespace src {
    class src.Wall {
    }
  }
  

  src.BreakableWall -up-|> src.Wall
  src.Bullet -up-|> src.GameObject
  src.GameWorld -up-|> javax.swing.JPanel
  src.GameWorld o-- src.CollisionHandler : CH
  src.GameWorld o-- src.Tank : t1
  src.GameWorld o-- src.Tank : t2
  src.MouseReader .up.|> java.awt.event.MouseListener
  src.PowerUp -up-|> src.GameObject
  src.Tank -up-|> src.GameObject
  src.Tank o-- src.GameWorld : gw
  src.TankControl .up.|> java.awt.event.KeyListener
  src.TankControl o-- src.Tank : t1
  src.Wall -up-|> src.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
